Update C++ types and benchmarks